# cargo-mkrs

./: Cargo.toml  LICENSE  README.md
src/: config.rs
