[package]
name = "cargo-mkrs"
version = "0.1.1"
authors = ["xnlogical"]
edition = "2024"
description = "Cargo subcommand for generating Rust files"
readme = "README.md"
repository = "https://github.com/xnlogical/cargo-mkrs"
license = "MIT"
keywords = ["cli", "generator", "utility"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
toml = "1.0.3"
walkdir = "2.5.0"
